# iouring_cc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Macros.cmake  Packages.cmake  ProjectSetup.cmake  Targets.cmake  code-coverage.cmake
cmake/modules/: FindASan.cmake  FindGperftools.cmake  FindLSan.cmake  FindMSan.cmake  FindTSan.cmake  FindUBSan.cmake  Findliburing.cmake
cmake/support/iwyu/: iwyu.sh
docs/: API.md
examples/: CMakeLists.txt  io_uring_instance.h
examples/fileio/: CMakeLists.txt  fileio.cc  fileio.h
examples/netio/: CMakeLists.txt  acceptor.cc  acceptor.h  endian_ops.h  epoll.cc  epoll.h  epoll_ops.cc  epoll_ops.h  epoll_tcp_server.cc  inetaddress.cc  inetaddress.h  socket.cc  socket.h  socket_ops.cc  socket_ops.h  tcp_client.cc  tcp_server.cc
iouring/: CMakeLists.txt  assert.h  buffer.h  buffer_pool.h  defer.h  io_completion.h  io_queue.h  io_request.h  io_sink.h  io_uring.cc  io_uring.h  io_uring_api.h  io_uring_utils.h  logger.h  noncopyable.h  status.h  threadpool.h
test/: CMakeLists.txt  gtest_main.cc  test_file_register.cc  test_fileio.cc  test_include.h  test_io_uring.cc
timemory_interface/: CMakeLists.txt  timemory_interface.cc  timemory_interface.h
tools/: add_license.sh  build.sh  user.license
